<resources>
    <string name="app_name">Poke GO</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="preferences">Settings</string>
    <string name="about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="cancel_item">Cancel</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="places">Places</string>
    <string name="error">Error</string>
    <string name="set_as_main">Set as main</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Dashboard</string>
    <string name="map">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="view_profile">View Profile</string>
    <string name="second_activity">SECOND ACTIVITY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="new_comments">New comments</string>
    <string name="new_">New</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>
    <string name="pref_radiusConnectionSumm">Specify desired lookup range for when to be notified when pokemons are near</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_map_list">pref_map_list</string>
    <string name="pref_radius">pref_radius</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_radius_map">pref_radius_map</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="turn_notif_on">Stop notification</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="latest_catch">Your latest catch:</string>
    <string name="near_fight">You\'re near pokemon</string>
    <string name="wanna_catch">Wanna try and catch him?</string>
    <string name="catchBtn">Catch!</string>
    <string name="ignoreBtn">Ignore</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tap_to_play">TAP TO PLAY</string>
    <string name="wrong_credentials">Incorrect email or password! Try again.</string>
    <string name="have_no_account">Don\'t have an account? Sign up now</string>
    <string name="already_have_account">Already have an account? Log in to play</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="btn_register">REGISTER</string>
    <string name="bad_data">All fileds are required. Please populate all fields!</string>
    <string name="email_already_exist">User with that email is already register. Please try to log in to the application</string>
    <string name="field_populated"> field should be populated!</string>
    <string name="profile">Profile</string>
    <string name="profile_long">User\'s profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="poke_go">Pokemon - Gotta catch them all!</string>
    <string name="pokemon_list">My pokemon</string>
    <string name="pokemon_list_long">See the list of pokemon</string>
    <string name="nearby_pokemon">Pokemon Nearby</string>
    <string name="nearby_pokemon_long">See pokemon near you</string>
    <string name="defense">Defense</string>
    <string name="atk">Attack</string>
    <string name="hp">Health</string>
    <string name="action_log_out">Log out</string>
    <string name="log_out">Log out</string>
    <string name="takePicture">Take a picture</string>
    <string name="lvl">Level</string>
    <string name="details">Pokemon Details</string>
    <string name="try_catch">You`re trying to catch:</string>
    <string name="btn_choose_f">CHOOSE FIGHTER</string>
    <string name="fgtn">You`re fighting:</string>
    <string name="yr_pok">Your pokemon:</string>
    <string name="boss_fight_start">Start fight with boss</string>
    <string name="choose_fighter">Choose your fighter:</string>
    <string name="lost_btn">TRY AGAIN</string>
    <string name="lost">You`ve missed it!</string>
    <string name="won_btn">SUCCESS!</string>
    <string name="won_long">You`ve caught a pokemon!</string>
    <string name="boss_atks">***BOSS ATTACKS***</string>
    <string name="use_atks">***POKEMON ATTACKS***</string>
    <string name="atk_num">Attack number:</string>
    <string name="over">FIGHT OVER!</string>
    <string name="cd">COOLDOWN!</string>



</resources>
