<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/background" />
    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:windowSoftInputMode="adjustPan"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/logo"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="170px"
            android:layout_marginRight="170px"
            android:src="@drawable/logo" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/first_name"
            android:id="@+id/first_name"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/logo"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:textColorHint="#eee"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/last_name"
            android:id="@+id/last_name"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/first_name"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:textColorHint="#eee"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/email"
            android:id="@+id/email"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/last_name"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:textColorHint="#eee"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/password"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/email"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:textColorHint="#eee"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/btn_register"
            android:id="@+id/btn_register"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/already_have_account"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="100dp"
            android:radius="10dp"
            android:onClick="register"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:autoLink="web"
            android:id="@+id/already_have_account"
            android:layout_alignParentBottom="true"
            android:layout_margin="50px"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:linksClickable="true"
            android:onClick="alreadyHaveAccount"
            />

    </RelativeLayout>

</RelativeLayout>